2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxFolderActions.m ([-canAccessContentAction]):
	changed the method paradigm to only return HTTP code 204. Not test
	is done whatsoever since the security manager does it for us.

	* UI/Contacts/UIxContactsListView.m ([-canAccessContentAction]):
	removed method because the same exists in UIxFolderActions.m

	* UI/Contacts/UIxContactsUserRightsEditor.m
	([UIxContactsUserRightsEditor
	-setUserCanReadObjects:userCanReadObjects]): new method.

	* SoObjects/SOGo/SOGoPermissions.m: added roles "FolderViewer" and
	"FolderEraser" and special permission "Access Object". Removed
	role "SOGoMailRole_MessageEraser" since "SOGoRole_ObjectEraser"
	can be used instead. Removed "FolderReader" since it is useless.

	* SoObjects/Contacts/SOGoContactGCSEntry.m ([SOGoContactGCSEntry
	-vCard]): directly use the "content" ivar since it is initialized
	during object creation.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -init]): no longer handle the
	nameInContainer no the container ivars. They were removed because
	this class is a descendant of SOGoObject which already has them.
	([SOGoContactLDAPFolder -davDisplayName]): new overriden method
	returning "displayName".
	([SOGoContactLDAPFolder -isFolderish]): new overriden method
	returning "YES".

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -isOrganizerOrOwner:user]): commented out.
	([SOGoCalendarComponent -findParticipant:user]): new name for
	method "participant:".
	([SOGoCalendarComponent -findParticipantWithUID:uid]): same as
	findparticipant but taking a uid string as parameter.
	([SOGoCalendarComponent -contentAsString]): don't regenerate the
	iCalendar automatically. Instead, this is done only when the user
	is a "date and time viewer".
	([SOGoCalendarComponent -aclsForUser:uid]): take delegation roles
	(modifier and responder) into account by compiling them with the
	owner's roles.
